2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘genrevs’, ‘gr_revno’ able to inhibit storing.

	* rcsrev.c (STORE_MAYBE, CLEAR_MAYBE): New macros.
	(genbranch, genrevs): Use ‘STORE_MAYBE’, ‘CLEAR_MAYBE’.
	(branchtip): Update call to ‘gr_revno’ to specify no storage.
	* co.c (addjoin): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcsmerge.c (main): Likewise.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid ‘next’ as a local variable name.

	* rcsedit.c (checkaccesslist): Rewrite ‘do-while’ as ‘for’ loop.
	* rcsrev.c (genbranch, genrevs): Rename local var ‘next’ to ‘d’.
	(rev_from_symbol): Rename local var ‘next’ to ‘ls’.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct wlink’ for hash table buckets.

	* base.h (struct hshentry): Delete member ‘nexthsh’.
	(struct parse_state): Change type of ‘hshtab’ to ‘struct wlink **’.
	* rcslex.c: #include "b-esds.h".
	(lookup): Update to walk ‘struct wlink’ list; for new
	entries, push -- use ‘wprepend’ -- instead of appending.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct branchhead’ with ‘struct wlink’.

	Here, "U" means "Update to walk ‘struct wlink’ list".
	* base.h (struct branchhead): Delete.
	(struct hshentry): Change type of member ‘branches’ to ‘struct wlink *’.
	* ci.c (newbranch): Change type to ‘struct wlink’.
	(BHDELTA): New macro.
	(addbranch): U; use ‘BHDELTA’.
	* rcs.c (buildtree): U.
	* rcsgen.c (putdelta, puttree): U.
	* rcsrev.c (genbranch): U.
	* rcssyn.c (getdelta): U.
	* rlog.c (putadelta, putforest, exttree, recentdate, extdate): U.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct wlink’ for ‘ADMIN (locks)’ list.

	Here, "U" means "Update to walk ‘struct wlink’ list".
	* base.h (struct rcslock): Delete member ‘nextlock’.
	(struct repository): In sub-‘struct admin’,
	change type of member ‘locks’ to ‘struct wlink *’.
	* ci.c (removelock): U.
	* co.c (rmlock): U.
	* rcs.c (breaklock, branchpoint): U.