@@ -1,5 +1,13 @@
 2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Fix bug: Resolve ‘BRNUM.’ correctly.
+
+	Regression introduced 2010-04-21, "Add abstraction: fully_numeric".
+	* rcsrev.c (fully_numeric): When expanding "BRNUM."--note
+	trailing dot--append only the non-branch part of the tip revision.
+
+2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Make ‘genrevs’, ‘gr_revno’ able to inhibit storing.
 
 	* rcsrev.c (STORE_MAYBE, CLEAR_MAYBE): New macros.
